# resume-demo

./: .envrc.example  .gitignore  README.md  e2b.Dockerfile  e2b.toml  next.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
ai/: providers.ts  tools.ts
app/: layout.tsx
app/api/chat/: route.ts
components/: chat.tsx  message.tsx  model-picker.tsx  project-overview.tsx  textarea.tsx
data/resumes/: README.md
data/resumes/processed/: 10041713.json  10062724.json  10182582.json  10189110.json  10219099.json  10289113.json  10329506.json  10466208.json  10501991.json  10674770.json  10694288.json  10748989.json  10818478.json  10876132.json  10898339.json  10953078.json  11160414.json  11174187.json  11188218.json  11209758.json  11444536.json  11522068.json  11555549.json  11616482.json  11677012.json  11677077.json  11704150.json  11722421.json  11752500.json  11759079.json  11763983.json  11813872.json  11850315.json  11887930.json  11981094.json  12043694.json  12059610.json  12092347.json  12122372.json  12155206.json  (+460 more)
data/resumes/schemas/: resume.schema.json
src/resume_demo/: dataloader.py  models.py
